@@ -3,6 +3,9 @@ libpmount (0.0.14) UNRELEASED; urgency=low
   * Switch the symbols file to use symver tags instead of symbol patterns.
   * Now using Standards-Version 3.9.2 (no changes needed).
   * Use dpkg-buildflags to set CPPFLAGS, CFLAGS and LDFLAGS.
+  * Rename build target to build-arch, add build-indep and build targets,
+    the latter depending on build-indep and build-arch. Rename install to
+    install-arch.
 
  -- Guillem Jover <guillem@debian.org>  Tue, 31 May 2011 09:24:44 +0200
 
